tests/int02_err.json.err
Parse error at line 001

001: [-]
       ^
Expected digit(s)
